src/main/java/org/tfg/custom/gen/CustomDjiControllerParser.java
// Generated from /Users/TFG/Documents/TFG/backend/dji-connection/src/main/antlr/CustomDjiController.g4 by ANTLR 4.13.2
package org.tfg.custom.gen;

import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class CustomDjiControllerParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
            T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
            T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, T__23 = 24,
            T__24 = 25, T__25 = 26, T__26 = 27, T__27 = 28, T__28 = 29, DOUBLE = 30, INT = 31, WS = 32,
            STRING = 33;
    public static final int
            RULE_program = 0, RULE_statement = 1, RULE_runStatement = 2, RULE_initKeyboardStatement = 3,
            RULE_displaySearchOptionsStatement = 4, RULE_setTargetAltitudeStatement = 5,
            RULE_startDroneStatement = 6, RULE_hoverStatement = 7, RULE_upStatement = 8,
            RULE_downStatement = 9, RULE_rotateRightStatement = 10, RULE_rotateLeftStatement = 11,
            RULE_moveAheadStatement = 12, RULE_moveBackStatement = 13, RULE_logStatement = 14,
            RULE_expr = 15;

    private static String[] makeRuleNames() {
        return new String[]{
                "program", "statement", "runStatement", "initKeyboardStatement", "displaySearchOptionsStatement",
                "setTargetAltitudeStatement", "startDroneStatement", "hoverStatement",
                "upStatement", "downStatement", "rotateRightStatement", "rotateLeftStatement",
                "moveAheadStatement", "moveBackStatement", "logStatement", "expr"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "'initManualDrive'", "'habilitarControlManual'", "';'", "'initKeyboard'",
                "'iniciarTeclado'", "'('", "')'", "'displaySearchOptions'", "'mostrarOpcionesDeBusqueda'",
                "'setTargetAltitude'", "'establecerAltitudObjetivo'", "'start'", "'iniciar'",
                "'hold'", "'mantener'", "'ascend'", "'ascender'", "'descend'", "'descender'",
                "'turnRight'", "'girarDerecha'", "'turnLeft'", "'girarIzquierda'", "'forward'",
                "'avanzar'", "'backward'", "'retroceder'", "'log'", "'imprimir'"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, "DOUBLE", "INT", "WS", "STRING"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "CustomDjiController.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public CustomDjiControllerParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ProgramContext extends ParserRuleContext {
        public List<StatementContext> statement() {
            return getRuleContexts(StatementContext.class);
        }

        public StatementContext statement(int i) {
            return getRuleContext(StatementContext.class, i);
        }

        public ProgramContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_program;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CustomDjiControllerListener)
                ((CustomDjiControllerListener) listener).enterProgram(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CustomDjiControllerListener)
                ((CustomDjiControllerListener) listener).exitProgram(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CustomDjiControllerVisitor)
                return ((CustomDjiControllerVisitor<? extends T>) visitor).visitProgram(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ProgramContext program() throws RecognitionException {
        ProgramContext _localctx = new ProgramContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_program);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(33);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(32);
                            statement();
                        }
                    }
                    setState(35);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1073741622L) != 0));
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class StatementContext extends ParserRuleContext {
        public RunStatementContext runStatement() {
            return getRuleContext(RunStatementContext.class, 0);
        }

        public InitKeyboardStatementContext initKeyboardStatement() {
            return getRuleContext(InitKeyboardStatementContext.class, 0);
        }

        public DisplaySearchOptionsStatementContext displaySearchOptionsStatement() {
            return getRuleContext(DisplaySearchOptionsStatementContext.class, 0);
        }

        public SetTargetAltitudeStatementContext setTargetAltitudeStatement() {
            return getRuleContext(SetTargetAltitudeStatementContext.class, 0);
        }

        public StartDroneStatementContext startDroneStatement() {
            return getRuleContext(StartDroneStatementContext.class, 0);
        }

        public HoverStatementContext hoverStatement() {
            return getRuleContext(HoverStatementContext.class, 0);
        }

        public UpStatementContext upStatement() {
            return getRuleContext(UpStatementContext.class, 0);
        }

        public DownStatementContext downStatement() {
            return getRuleContext(DownStatementContext.class, 0);
        }

        public RotateRightStatementContext rotateRightStatement() {
            return getRuleContext(RotateRightStatementContext.class, 0);
        }

        public RotateLeftStatementContext rotateLeftStatement() {
            return getRuleContext(RotateLeftStatementContext.class, 0);
        }

        public MoveAheadStatementContext moveAheadStatement() {
            return getRuleContext(MoveAheadStatementContext.class, 0);
        }

        public MoveBackStatementContext moveBackStatement() {
            return getRuleContext(MoveBackStatementContext.class, 0);
        }

        public LogStatementContext logStatement() {
            return getRuleContext(LogStatementContext.class, 0);
        }

        public StatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_statement;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CustomDjiControllerListener)
                ((CustomDjiControllerListener) listener).enterStatement(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CustomDjiControllerListener)
                ((CustomDjiControllerListener) listener).exitStatement(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CustomDjiControllerVisitor)
                return ((CustomDjiControllerVisitor<? extends T>) visitor).visitStatement(this);
            else return visitor.visitChildren(this);
        }
    }

    public final StatementContext statement() throws RecognitionException {
        StatementContext _localctx = new StatementContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_statement);
        try {
            setState(50);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case T__0:
                case T__1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(37);
                    runStatement();
                }
                break;
                case T__3:
                case T__4:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(38);
                    initKeyboardStatement();
                }
                break;
                case T__7:
                case T__8:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(39);
                    displaySearchOptionsStatement();
                }
                break;
                case T__9:
                case T__10:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(40);
                    setTargetAltitudeStatement();
                }
                break;
                case T__11:
                case T__12:
                    enterOuterAlt(_localctx, 5);
                {
                    setState(41);
                    startDroneStatement();
                }
                break;
                case T__13:
                case T__14:
                    enterOuterAlt(_localctx, 6);
                {
                    setState(42);
                    hoverStatement();
                }
                break;
                case T__15:
                case T__16:
                    enterOuterAlt(_localctx, 7);
                {
                    setState(43);
                    upStatement();
                }
                break;
                case T__17:
                case T__18:
                    enterOuterAlt(_localctx, 8);
                {
                    setState(44);
                    downStatement();
                }
                break;
                case T__19:
                case T__20:
                    enterOuterAlt(_localctx, 9);
                {
                    setState(45);
                    rotateRightStatement();
                }
                break;
                case T__21:
                case T__22:
                    enterOuterAlt(_localctx, 10);
                {
                    setState(46);
                    rotateLeftStatement();
                }
                break;
                case T__23:
                case T__24:
                    enterOuterAlt(_localctx, 11);
                {
                    setState(47);
                    moveAheadStatement();
                }
                break;
                case T__25:
                case T__26:
                    enterOuterAlt(_localctx, 12);
                {
                    setState(48);
                    moveBackStatement();
                }
                break;
                case T__27:
                case T__28:
                    enterOuterAlt(_localctx, 13);
                {
                    setState(49);
                    logStatement();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class RunStatementContext extends ParserRuleContext {
        public RunStatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_runStatement;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CustomDjiControllerListener)
                ((CustomDjiControllerListener) listener).enterRunStatement(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CustomDjiControllerListener)
                ((CustomDjiControllerListener) listener).exitRunStatement(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CustomDjiControllerVisitor)
                return ((CustomDjiControllerVisitor<? extends T>) visitor).visitRunStatement(this);
            else return visitor.visitChildren(this);
        }
    }

    public final RunStatementContext runStatement() throws RecognitionException {
        RunStatementContext _localctx = new RunStatementContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_runStatement);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(52);
                _la = _input.LA(1);
                if (!(_la == T__0 || _la == T__1)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
                setState(53);
                match(T__2);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class InitKeyboardStatementContext extends ParserRuleContext {
        public TerminalNode INT() {
            return getToken(CustomDjiControllerParser.INT, 0);
        }

        public InitKeyboardStatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_initKeyboardStatement;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CustomDjiControllerListener)
                ((CustomDjiControllerListener) listener).enterInitKeyboardStatement(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CustomDjiControllerListener)
                ((CustomDjiControllerListener) listener).exitInitKeyboardStatement(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CustomDjiControllerVisitor)
                return ((CustomDjiControllerVisitor<? extends T>) visitor).visitInitKeyboardStatement(this);
            else return visitor.visitChildren(this);
        }
    }

    public final InitKeyboardStatementContext initKeyboardStatement() throws RecognitionException {
        InitKeyboardStatementContext _localctx = new InitKeyboardStatementContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_initKeyboardStatement);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(55);
                _la = _input.LA(1);
                if (!(_la == T__3 || _la == T__4)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
                setState(56);
                match(T__5);
                setState(57);
                match(INT);
                setState(58);
                match(T__6);
                setState(59);
                match(T__2);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class DisplaySearchOptionsStatementContext extends ParserRuleContext {
        public DisplaySearchOptionsStatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_displaySearchOptionsStatement;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CustomDjiControllerListener)
                ((CustomDjiControllerListener) listener).enterDisplaySearchOptionsStatement(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CustomDjiControllerListener)
                ((CustomDjiControllerListener) listener).exitDisplaySearchOptionsStatement(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CustomDjiControllerVisitor)
                return ((CustomDjiControllerVisitor<? extends T>) visitor).visitDisplaySearchOptionsStatement(this);
            else return visitor.visitChildren(this);
        }
    }

    public final DisplaySearchOptionsStatementContext displaySearchOptionsStatement() throws RecognitionException {
        DisplaySearchOptionsStatementContext _localctx = new DisplaySearchOptionsStatementContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_displaySearchOptionsStatement);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(61);
                _la = _input.LA(1);
                if (!(_la == T__7 || _la == T__8)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
                setState(62);
                match(T__2);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class SetTargetAltitudeStatementContext extends ParserRuleContext {
        public TerminalNode DOUBLE() {
            return getToken(CustomDjiControllerParser.DOUBLE, 0);
        }

        public SetTargetAltitudeStatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_setTargetAltitudeStatement;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CustomDjiControllerListener)
                ((CustomDjiControllerListener) listener).enterSetTargetAltitudeStatement(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CustomDjiControllerListener)
                ((CustomDjiControllerListener) listener).exitSetTargetAltitudeStatement(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CustomDjiControllerVisitor)
                return ((CustomDjiControllerVisitor<? extends T>) visitor).visitSetTargetAltitudeStatement(this);
            else return visitor.visitChildren(this);
        }
    }

    public final SetTargetAltitudeStatementContext setTargetAltitudeStatement() throws RecognitionException {
        SetTargetAltitudeStatementContext _localctx = new SetTargetAltitudeStatementContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_setTargetAltitudeStatement);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(64);
                _la = _input.LA(1);
                if (!(_la == T__9 || _la == T__10)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
                setState(65);
                match(T__5);
                setState(66);
                match(DOUBLE);
                setState(67);
                match(T__6);
                setState(68);
                match(T__2);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class StartDroneStatementContext extends ParserRuleContext {
        public TerminalNode DOUBLE() {
            return getToken(CustomDjiControllerParser.DOUBLE, 0);
        }

        public StartDroneStatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_startDroneStatement;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CustomDjiControllerListener)
                ((CustomDjiControllerListener) listener).enterStartDroneStatement(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CustomDjiControllerListener)
                ((CustomDjiControllerListener) listener).exitStartDroneStatement(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CustomDjiControllerVisitor)
                return ((CustomDjiControllerVisitor<? extends T>) visitor).visitStartDroneStatement(this);
            else return visitor.visitChildren(this);
        }
    }

    public final StartDroneStatementContext startDroneStatement() throws RecognitionException {
        StartDroneStatementContext _localctx = new StartDroneStatementContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_startDroneStatement);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(70);
                _la = _input.LA(1);
                if (!(_la == T__11 || _la == T__12)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
                setState(71);
                match(T__5);
                setState(72);
                match(DOUBLE);
                setState(73);
                match(T__6);
                setState(74);
                match(T__2);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class HoverStatementContext extends ParserRuleContext {
        public TerminalNode DOUBLE() {
            return getToken(CustomDjiControllerParser.DOUBLE, 0);
        }

        public HoverStatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_hoverStatement;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CustomDjiControllerListener)
                ((CustomDjiControllerListener) listener).enterHoverStatement(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CustomDjiControllerListener)
                ((CustomDjiControllerListener) listener).exitHoverStatement(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CustomDjiControllerVisitor)
                return ((CustomDjiControllerVisitor<? extends T>) visitor).visitHoverStatement(this);
            else return visitor.visitChildren(this);
        }
    }

    public final HoverStatementContext hoverStatement() throws RecognitionException {
        HoverStatementContext _localctx = new HoverStatementContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_hoverStatement);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(76);
                _la = _input.LA(1);
                if (!(_la == T__13 || _la == T__14)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
                setState(77);
                match(T__5);
                setState(78);
                match(DOUBLE);
                setState(79);
                match(T__6);
                setState(80);
                match(T__2);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class UpStatementContext extends ParserRuleContext {
        public TerminalNode DOUBLE() {
            return getToken(CustomDjiControllerParser.DOUBLE, 0);
        }

        public UpStatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_upStatement;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CustomDjiControllerListener)
                ((CustomDjiControllerListener) listener).enterUpStatement(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CustomDjiControllerListener)
                ((CustomDjiControllerListener) listener).exitUpStatement(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CustomDjiControllerVisitor)
                return ((CustomDjiControllerVisitor<? extends T>) visitor).visitUpStatement(this);
            else return visitor.visitChildren(this);
        }
    }

    public final UpStatementContext upStatement() throws RecognitionException {
        UpStatementContext _localctx = new UpStatementContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_upStatement);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(82);
                _la = _input.LA(1);
                if (!(_la == T__15 || _la == T__16)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
                setState(83);
                match(T__5);
                setState(84);
                match(DOUBLE);
                setState(85);
                match(T__6);
                setState(86);
                match(T__2);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class DownStatementContext extends ParserRuleContext {
        public TerminalNode DOUBLE() {
            return getToken(CustomDjiControllerParser.DOUBLE, 0);
        }

        public DownStatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_downStatement;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CustomDjiControllerListener)
                ((CustomDjiControllerListener) listener).enterDownStatement(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CustomDjiControllerListener)
                ((CustomDjiControllerListener) listener).exitDownStatement(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CustomDjiControllerVisitor)
                return ((CustomDjiControllerVisitor<? extends T>) visitor).visitDownStatement(this);
            else return visitor.visitChildren(this);
        }
    }

    public final DownStatementContext downStatement() throws RecognitionException {
        DownStatementContext _localctx = new DownStatementContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_downStatement);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(88);
                _la = _input.LA(1);
                if (!(_la == T__17 || _la == T__18)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
                setState(89);
                match(T__5);
                setState(90);
                match(DOUBLE);
                setState(91);
                match(T__6);
                setState(92);
                match(T__2);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class RotateRightStatementContext extends ParserRuleContext {
        public RotateRightStatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_rotateRightStatement;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CustomDjiControllerListener)
                ((CustomDjiControllerListener) listener).enterRotateRightStatement(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CustomDjiControllerListener)
                ((CustomDjiControllerListener) listener).exitRotateRightStatement(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CustomDjiControllerVisitor)
                return ((CustomDjiControllerVisitor<? extends T>) visitor).visitRotateRightStatement(this);
            else return visitor.visitChildren(this);
        }
    }

    public final RotateRightStatementContext rotateRightStatement() throws RecognitionException {
        RotateRightStatementContext _localctx = new RotateRightStatementContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_rotateRightStatement);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(94);
                _la = _input.LA(1);
                if (!(_la == T__19 || _la == T__20)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
                setState(95);
                match(T__5);
                setState(96);
                match(T__6);
                setState(97);
                match(T__2);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class RotateLeftStatementContext extends ParserRuleContext {
        public RotateLeftStatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_rotateLeftStatement;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CustomDjiControllerListener)
                ((CustomDjiControllerListener) listener).enterRotateLeftStatement(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CustomDjiControllerListener)
                ((CustomDjiControllerListener) listener).exitRotateLeftStatement(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CustomDjiControllerVisitor)
                return ((CustomDjiControllerVisitor<? extends T>) visitor).visitRotateLeftStatement(this);
            else return visitor.visitChildren(this);
        }
    }

    public final RotateLeftStatementContext rotateLeftStatement() throws RecognitionException {
        RotateLeftStatementContext _localctx = new RotateLeftStatementContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_rotateLeftStatement);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(99);
                _la = _input.LA(1);
                if (!(_la == T__21 || _la == T__22)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
                setState(100);
                match(T__5);
                setState(101);
                match(T__6);
                setState(102);
                match(T__2);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }
